Spring: Optimize objectmapper and fix N+1